<resources>

    <!--  Элементы главного экрана  -->
    <string name="app_name">SurimusaKotlin</string>
    <string name="week">Неделя</string>
    <string name="today">Сегодня</string>
    <string name="summary">Сводка</string>
    <string name="all_eat_ccal">Съедено</string>
    <string name="all_lost_ccal">Осталось</string>
    <string name="burned_ccal">Сожжено</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="water_track">Отслеживание выпитой воды</string>
    <string name="nutrition">Питание</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="activity">Активность</string>
    <string name="pedometer">Шагомер</string>
    <!--    Строковый ресурс для текста кнопки-->
    <string name="add_your_activity_button_text">Добавьте свою активность</string>
    <!--  Экран добавления блюда к завтраку/обеду/ужину/перекусу  -->
    <string name="search_empty">Что вы ищете?</string>
    <string name="products">Продукты</string>
    <string name="meals">Приемы пищи</string>
    <string name="frequent">Частые</string>
    <string name="recent">Недавние</string>
    <string name="done_button_text">Готово</string>
    <!--  Экран интервального голодания  -->
    <string name="your_tracker">Ваш трекер</string>
    <string name="intermittent_fasting">Интервальное голодание</string>
    <string name="fasting_tracker">Трекер голодания</string>
    <string name="customize_yourself">Настройте трекер под себя</string>
    <string name="you_can_eat">Можете есть!</string>
    <string name="you_are_starving">Вы голодаете!</string>
    <string name="start_of_starving">Начало периода голодания</string>
    <string name="end_of_starving">Окончание голодания</string>
    <string name="start_of_eating">Начало периода приема пищи</string>
    <string name="end_of_eating">Окончание периода приема пищи</string>
    <string name="popular_trackers">Популярные трекеры</string>
    <string name="description_16_8">16 часов голодания, 8 часов еды. Одна из самых популярных программ по всему миру!</string>
    <string name="description_14_10">Простой путь к 14 часам голодания и 10 часам приема пищи.</string>
    <string name="description_15_9">Постепенно готовьтесь к длительному 15-часовому голоданию.</string>
    <string name="description_13_11">Голодание 13 часов, еда 11 часов. Никаких ночных перекусов!</string>
    <string name="description_12_12">Самая простая программа голодания. Подходит для начинающих.</string>
    <!--  Разные состояния кнопки включения, старта и окончания голодания  -->
    <string name="on_tracker">Включить трекер</string>
    <string name="start_tracker">Начать голодание</string>
    <string name="stop_tracker">Окончание периода голодания</string>
    <string name="empty_text">empty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_textempty_text</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mass_of_food">Масса(Заглушка)</string>
    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="registration">Регистрация</string>
    <string name="Login">Авторизация</string>
    <string name="set_your_portion">Настройте свою порцию</string>
    <string name="final_nutrient_in_product">Нутриенты в %1$s граммах продукта</string>
    <string name="total_fat">Всего жиров</string>
    <string name="saturated_fat">Насыщенные жиры</string>
    <string name="cholesterol">Холестерин</string>
    <string name="sodium">Натрий</string>
    <string name="total_carbohydrates">Всего углеводов</string>
    <string name="dietary_fiber">Пищевая клетчатка</string>
    <string name="sugar">Сахар</string>
    <string name="potassium">Калий</string>
    <string name="link_to_image">https://www.eatingwell.com/thmb/m5xUzIOmhWSoXZnY-oZcO9SdArQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/article_291139_the-top-10-healthiest-foods-for-kids_-02-4b745e57928c4786a61b47d8ba920058.jpg</string>
    <string name="delete_product">Удалить продукт</string>
    <string name="close">Закрыть</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>