<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.AddingSearchedProductFragment">


    <TextView
        android:id="@+id/product_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/blinker_bold"
        android:maxLength="25"
        android:text="@string/empty_text"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/top_strings_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:src="@drawable/add_food"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_of_product"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        android:elevation="80dp"
        android:outlineSpotShadowColor="?attr/colorTertiaryFixed"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_text"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/food"
        app:strokeColor="?attr/colorSecondaryVariant"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/set_your_portion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/blinker_bold"
        android:maxLength="25"
        android:text="@string/set_your_portion"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/top_strings_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_of_product" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gramms_calories_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/set_your_portion_text" />

    <EditText
        android:id="@+id/edit_text_for_grams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/gramms_calories_group"
        app:layout_constraintLeft_toLeftOf="@id/gramms_calories_group"
        app:layout_constraintRight_toLeftOf="@id/result_grams_text"
        app:layout_constraintTop_toTopOf="@id/gramms_calories_group"
        android:fontFamily="@font/blinker_bold"
        android:textColorHint="?attr/colorTertiary"
        android:maxLength="7"
        android:gravity="center" />


    <TextView
        android:id="@+id/result_grams_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blinker_bold"
        android:text="Граммов"
        android:textSize="@dimen/top_strings_size"
        android:layout_marginEnd="20dp"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="@id/gramms_calories_group"
        app:layout_constraintLeft_toRightOf="@id/edit_text_for_grams"
        app:layout_constraintTop_toTopOf="@id/gramms_calories_group"
        app:layout_constraintRight_toRightOf="@id/guideline9"/>

    <EditText
        android:id="@+id/edit_text_for_calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/gramms_calories_group"
        app:layout_constraintRight_toLeftOf="@id/result_calories_text"
        app:layout_constraintTop_toTopOf="@id/gramms_calories_group"
        app:layout_constraintLeft_toLeftOf="@id/guideline9"
        android:fontFamily="@font/blinker_bold"
        android:textColorHint="?attr/colorTertiary"
        android:gravity="center"
        android:editable="false"/>

    <TextView
        android:id="@+id/result_calories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blinker_bold"
        android:text="Калорий"
        android:textSize="@dimen/top_strings_size"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="@id/gramms_calories_group"
        app:layout_constraintRight_toRightOf="@id/gramms_calories_group"
        app:layout_constraintTop_toTopOf="@id/gramms_calories_group" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/final_nutrients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/blinker_bold"
        android:text="@string/final_nutrient_in_product"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/top_strings_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gramms_calories_group" />


    <ImageView
        android:id="@+id/product_drawline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="35dp"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/final_nutrients_text"
        app:layout_constraintBottom_toTopOf="@id/total_fat_textView"
        />
    <TextView
        android:id="@+id/total_fat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline1"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline2"
        android:text="@string/total_fat"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/total_fat_textView"
        app:layout_constraintBottom_toTopOf="@id/saturated_fat_textView"/>
    <TextView
        android:id="@+id/saturated_fat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline2"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline3"
        android:text="@string/saturated_fat"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        android:layout_marginStart="30dp"
        />
    <ImageView
        android:id="@+id/product_drawline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/saturated_fat_textView"
        app:layout_constraintBottom_toTopOf="@id/cholesterol_textView"/>

    <TextView
        android:id="@+id/cholesterol_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline3"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline4"
        android:text="@string/cholesterol"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/cholesterol_textView"
        app:layout_constraintBottom_toTopOf="@id/sodium_textView"/>
    <TextView
        android:id="@+id/sodium_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline4"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline5"
        android:text="@string/sodium"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/sodium_textView"
        app:layout_constraintBottom_toTopOf="@id/total_carbohydrates_textView"/>
    <TextView
        android:id="@+id/total_carbohydrates_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline5"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline6"
        android:text="@string/total_carbohydrates"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/total_carbohydrates_textView"
        app:layout_constraintBottom_toTopOf="@id/dietary_fiber_textView"/>

    <TextView
        android:id="@+id/dietary_fiber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline6"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline7"
        android:text="@string/dietary_fiber"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        android:layout_marginStart="30dp"
        />
    <ImageView
        android:id="@+id/product_drawline7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/dietary_fiber_textView"
        app:layout_constraintBottom_toTopOf="@id/sugar_textView"
        />

    <TextView
        android:id="@+id/sugar_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline7"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline8"
        android:text="@string/sugar"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        android:layout_marginStart="30dp"
        />
    <ImageView
        android:id="@+id/product_drawline8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/sugar_textView"
        app:layout_constraintBottom_toTopOf="@id/proteins_textView"
        />

    <TextView
        android:id="@+id/proteins_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline8"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline9"
        android:text="@string/proteins"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/proteins_textView"
        app:layout_constraintBottom_toTopOf="@id/potassium_textView"/>

    <TextView
        android:id="@+id/potassium_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/product_drawline9"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintBottom_toTopOf="@id/product_drawline10"
        android:text="@string/potassium"
        android:fontFamily="@font/blinker_regular"
        android:textColor="?attr/android:textColor"
        android:textSize="@dimen/calories_digits"
        />
    <ImageView
        android:id="@+id/product_drawline10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/drawline_auth"
        app:layout_constraintLeft_toLeftOf="@id/guideline8"
        app:layout_constraintRight_toRightOf="@id/guideline7"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/potassium_textView" />





</androidx.constraintlayout.widget.ConstraintLayout>